@@ -4,4 +4,16 @@ dependencies {
     api(project(":modulekit-api"))
     api(project(":modulekit-core"))
     compileOnly("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
+
+    testImplementation(platform("org.junit:junit-bom:5.10.0"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
+    testImplementation("org.mockito:mockito-core:5.14.2")
+    testImplementation("org.mockito:mockito-junit-jupiter:5.14.2")
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
 }
